# pluto-fw

./: .gitignore  CMakeLists.txt  msp430.cmake  shell.nix
common/: CMakeLists.txt
common/app/: app.c  app.h  apps.h  sources.mk
common/app/casio/: entry.cpp  sources.mk
common/app/conf/: app.c  sources.mk
common/app/cpp/: CMakeLists.txt  app.cpp  casio.cpp  casio.hpp  entrypoint.cpp  entrypoint.h  log.txt  logger.sh  modules.txt  sources.mk
common/app/cpp/framework/: createComponent.cpp  event.cpp  eventQueue.cpp  eventQueue.hpp  loop.cpp  loop.hpp  queue.cpp  queue.hpp  sources.mk  state.cpp  state.hpp
common/app/cpp/framework/components/: buttonTester.cpp  effectTester.cpp  timeDisplay.cpp  timeDisplay.hpp
common/app/cpp/framework/demos/: demoB.cpp  root.cpp  root.hpp
common/app/cpp/framework/hooks/: useButton.cpp  useEffect.cpp  useGlobalState.cpp  useGlobalState.hpp  useState.cpp  useState.hpp  useTime.cpp  useUnmountAction.cpp
common/app/launcher/: app.c
common/app/otp/: sources.mk
common/app/play/: sources.mk
common/app/speed/: sources.mk
common/app/time/: sources.mk
common/hal/: hal.h
common/svc/: CMakeLists.txt  aux_timer.c  aux_timer.h  beep.c  beep.h  compass.h  init.c  lcd.c  main.c  melody.c  menu.c  sources.mk  svc.h
sim/: .gitignore  Makefile
